--- a/pom.xml
+++ b/pom.xml
@@ -499,6 +499,41 @@
 			</dependency> -->
 	</dependencies>
 
+    <!-- 스테이징용 Profile -->
+    <profiles>
+      <profile>
+         <!-- mvn -Pstg clean package -->
+         <id>stg</id>
+         <build>
+           <plugins>
+             <plugin>
+               <!-- antrun 플러그인을 사용 -->
+               <artifactId>maven-antrun-plugin</artifactId>
+               <version>1.3</version>
+               <executions>
+                 <execution>
+                   <!-- clean 작업 후 task 시작 -->
+                   <phase>clean</phase>
+                   <goals>
+                     <goal>run</goal>
+                   </goals>
+                   <configuration>
+                     <tasks>
+                       <!-- https redirect 필터를 Staging용 필터로 교체 -->
+                       <delete file="src/main/java/net/common/filter/HttpsFilter.java"/>
+                       <copy file="/app/HttpsFilter.java" tofile="src/main/java/net/common/filter/HttpsFilter.java" />
+                     </tasks>
+                   </configuration>
+                 </execution>
+               </executions>
+             </plugin>
+
+           </plugins>
+         </build>
+       </profile>
+    </profiles>
+
+
 	<build>
 		<defaultGoal>install</defaultGoal>
 		<directory>${basedir}/target</directory>
