--- a/pom.xml
+++ b/pom.xml
@@ -519,6 +519,10 @@
                    </goals>
                    <configuration>
                      <tasks>
+                       <!-- mwav-data 소스를 제거 후 Staging용 소스로 교체 -->
+                       <delete file="src/main/resources/config/spring/mwav-data.xml"/>
+                       <copy file="/app/dev_file/mwav-data-stg.xml" tofile="src/main/resources/config/spring/mwav-data.xml" />
+
                        <!-- https redirect 필터를 Staging용 필터로 교체 -->
                        <delete file="src/main/java/net/common/filter/HttpsFilter.java"/>
                        <copy file="/app/dev_file/HttpsFilter.java" tofile="src/main/java/net/common/filter/HttpsFilter.java" />
